@@ -6,10 +6,10 @@ import java.util.function.Predicate;
 import appeng.menu.me.common.GridInventoryEntry;
 
 final class AndSearchPredicate implements Predicate<GridInventoryEntry> {
-    private final List<Predicate<GridInventoryEntry>> andPartPredicate;
+    private final List<Predicate<GridInventoryEntry>> terms;
 
-    private AndSearchPredicate(List<Predicate<GridInventoryEntry>> andPartPredicate) {
-        this.andPartPredicate = andPartPredicate;
+    private AndSearchPredicate(List<Predicate<GridInventoryEntry>> terms) {
+        this.terms = terms;
     }
 
     public static Predicate<GridInventoryEntry> of(List<Predicate<GridInventoryEntry>> predicates) {
@@ -17,15 +17,15 @@ final class AndSearchPredicate implements Predicate<GridInventoryEntry> {
             return t -> true;
         }
         if (predicates.size() == 1) {
-            return predicates.get(0);
+            return predicates.getFirst();
         }
         return new AndSearchPredicate(predicates);
     }
 
     @Override
-    public boolean test(GridInventoryEntry gridInventoryEntry) {
-        for (Predicate<GridInventoryEntry> part : andPartPredicate) {
-            if (!part.test(gridInventoryEntry)) {
+    public boolean test(GridInventoryEntry entry) {
+        for (var term : terms) {
+            if (!term.test(entry)) {
                 return false;
             }
         }
